# llms_from_scratch

./: .gitignore  Makefile  pyproject.toml
conf/: config.yaml
conf/loss/: cross_entropy.yaml
conf/model/: transformer.yaml
conf/optimizer/: adam.yaml
notebooks/: chapter2.ipynb
tools/: run_mlflow.sh  stop_mlflow.sh
transformer_from_scratch/: __init__.py  callbacks.py  config.yaml  decoding.py  logger.py  model.py  train_cli.py
transformer_from_scratch/callbacks/: __init__.py  base.py  lifecycle.py  translation.py
transformer_from_scratch/dataset/: bilingual_common.py  bilingual_dataloader.py  bilingual_dataset.py
transformer_from_scratch/pipelines/: __init__.py  base_pipeline.py  transformer_pipeline.py
transformer_from_scratch/utils/: config_utils.py  io_utils.py
transformer_from_scratch/visualizations/: __init__.py  attention.py
