[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<5",
    "lightning>=2.6.5",
    "mlflow>=2,<3",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
]
